# ratato-bot

./: .gitignore  LICENSE  main.py  pyproject.toml
ratato/: bot.py  discord.py  model.py  twitch.py
tests/: test_ratato.py
